# portfolio-analyzer

./: .gitignore  README.md  index.html  pyproject.toml  requirements-local.txt  requirements.txt  research.html  vercel.json
api/: analyze.py  extract.py
dashboard/: app.py
portfolio_analyzer/: __init__.py  cli.py  config.py  engine.py
portfolio_analyzer/analytics/: __init__.py  factors.py  portfolio.py  recommend.py  returns.py  risk.py
portfolio_analyzer/data/: __init__.py  base.py  csv_adapter.py  sample.py  yfinance_adapter.py
portfolio_analyzer/report/: __init__.py  charts.py  markdown.py
samples/: fundamentals.csv  holdings.csv  prices.csv
tests/: test_api_payloads.py  test_engine.py  test_factors_portfolio.py  test_risk.py
